dev/test_programs/INVALID/group5/scanner_literal_rune_too_short.go
package scanner_literal_rune_too_short

// where did the rune go?

var r rune = ''


